[tool.poetry]
name = "apm2"
version = "0.1.1"
description = ""
authors = ["Carlos Añorve <carlosaarivera23@gmail.com>"]

[tool.poetry.scripts]
apm2 = 'apmV2.cli:app'

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
cookiecutter = "^2.1.1"
tabulate = "^0.9.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
